fix summary element marker not hidden on safari

--- a/assets/src/global.css
+++ b/assets/src/global.css
@@ -91,6 +91,12 @@ body {
 	}
 }
 
+@layer components {
+	details summary::-webkit-details-marker {
+		display: none;
+	}
+}
+
 .fade-in.htmx-added {
 	opacity: 0;
 }
